# RustyChatBox

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
src/: config.rs  deps.rs  gui.rs  main.rs  osc.rs  ui.rs
src/modules/: activity.rs  app.rs  appo_mod.rs  chat_mod.rs  chatting.rs  comp_mod.rs  component.rs  extr_mod.rs  extra.rs  medi_mod.rs  media.rs  netw_mod.rs  network.rs  stat_mod.rs  status.rs  time.rs  time_mod.rs
src/ui/: chatting.rs  integrations.rs  options.rs  status.rs  toggle.rs  types.rs
