[package]
name = "rustychatbox"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3"
notify-rust = "4.8"
simplelog = "0.12"
dirs = "5.0"
sysinfo = "0.29"
chrono = "0.4"
chrono-tz = "0.8"
network-interface = "2.0.1"
rosc = "0.11.4"
rand = "0.8"
anyhow = "1.0"
log = "0.4"
open = "3.2"
image = "0.24"