[package]
name = "rustychatbox"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = { version = "0.22", default-features = false, features = ["default", "wayland", "glow"] }
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
network-interface = "2.0.1"
single-instance = "0.3"
notify-rust = "4.8"
serde_json = "1.0"
simplelog = "0.12"
chrono-tz = "0.8"
sysinfo = "0.29"
rosc = "0.11.4"
chrono = "0.4"
anyhow = "1.0"
open = "3.2"
dirs = "5.0"
rand = "0.8"
log = "0.4"

[profile.release]
strip = true
opt-level = 3
lto = "thin"